<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2026 Elvettorato

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/section_options">

    <SwitchPreferenceCompat
        android:key="pref_show_in_launcher"
        android:title="@string/option_show_in_launcher"
        android:summary="@string/option_show_in_launcher_summary"
        android:icon="@drawable/ic_list"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="pref_persistent_notification"
        android:title="@string/option_persistent_notification"
        android:summary="@string/option_persistent_notification_summary"
        android:icon="@drawable/ic_action_notification"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="pref_require_unlocked"
        android:title="@string/option_require_unlocked"
        android:summary="@string/option_require_unlocked_summary"
        android:defaultValue="false" />

    <SeekBarPreference
        android:key="pref_location_interval_min"
        android:title="@string/location_polling_interval"
        android:summary="@string/location_polling_interval_summary"
        android:icon="@drawable/ic_trigger_location"
        android:min="5"
        android:max="60"
        android:defaultValue="15"
        app:showSeekBarValue="true" />

    <Preference
        android:key="pref_about"
        android:title="@string/about_title" />
</PreferenceScreen>
